--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1100,6 +1100,9 @@ listen_on unix:/tmp/kitty-socket
 #: after ~/bin above. A path that starts with the - sign will be
 #: removed from the entire search order. For example::
 
+
+exe_search_path +$HOME/.zsh/bin
+
 #:     exe_search_path /some/prepended/path
 #:     exe_search_path +/some/appended/path
 #:     exe_search_path -/some/excluded/path
@@ -1508,8 +1511,9 @@ env PATH=$HOME/.zsh/bin:$PATH
 #map kitty_mod+y launch --cwd=current yazi
 #map cmd+y kitten run-shell zsh -ic '_yazi-jump'
 #map kitty_mod+y remote_control launch --type=overlay zsh -ic '_yazi-jump'
-map alt+s launch "$HOME/.zsh/bin/media search"
-map alt+p launch "media play --shuffle"
+map alt+s launch "media search --verbose"
+map alt+p launch "ls-media | mpv-stdin"
+#map alt+p launch "media play --shuffle"
 map alt+y launch "yazi"
 # map ctrl+space launch --type=overlay zsh -ic '_yazi-jump'
 #map ctrl+space no_op
