--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -116,3 +116,5 @@ osd-duration=3000                 # Messages fade out after 3 seconds
 
 # Default English subtitles if available
 #slang=en
+
+input-ipc-server=/tmp/.mpv-socket
