--- a/apps/yazi/keymap.toml
+++ b/apps/yazi/keymap.toml
@@ -4,7 +4,7 @@
 
 [[manager.prepend_keymap]]
 on   = ["}"]
-run  = "plugin --sync first-non-directory"
+run  = "plugin --- @sync first-non-directory"
 desc = "Jumps to the first file"
 
 [manager]
