--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -22,7 +22,10 @@ p script-binding show-minimal-playlist
 # Interpolation toggle
 # i cycle interpolation
 # V cycle-values osd-msg3 "${path}\n${width}x${height} ${video-bitrate} ${video-codec} @ ${fps}fps\n${file-size}" ""
-/ show-text "${metadata/title:}\n${width}x${height} @ ${estimated-vf-fps}fps\n${file-size}\n${video-bitrate:}" 5000 1
+
+/ show-text "${metadata/title:}\n${?gt(width,height):${width}:${height}}p @ ${estimated-vf-fps}fps\n${file-size}${?video-bitrate: [${video-bitrate}]}" 5000 1
+
+#/ show-text "${metadata/title:}\n${!add(gt(width,height),gt(height,width)):${width:0}:${height:0}}p @ ${estimated-vf-fps}fps\n${file-size}${?video-bitrate: [${video-bitrate}]}" 5000 1
 # ? show shortcut help
 
 # toggle subtitles
