--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -63,6 +63,10 @@ map ctrl+w>a launch --location=left
 map ctrl+w>d launch --location=right
 map ctrl+w>w close_window
 
+map alt+space launch --type=overlay --cwd=current kitty-overlay-lf
+
+
+
 # map cmd+o shell_command open $(kitty @ ls | jq -r '.[0].cwd'
 
 # map cmd+j goto_tab_below
@@ -571,12 +575,8 @@ select_by_word_characters @-./_~?&=%+#
 
 #: Terminal bell
 
-# enable_audio_bell yes
-
-#: Enable/disable the audio bell. Useful in environments that require
-#: silence.
-
-# visual_bell_duration 0.0
+enable_audio_bell no
+visual_bell_duration 0.1
 
 #: Visual bell duration. Flash the screen when a bell occurs for the
 #: specified number of seconds. Set to zero to disable.
@@ -611,19 +611,18 @@ select_by_word_characters @-./_~?&=%+#
 #: the operating systems sound API, such as WAV or OGA on Linux
 #: (libcanberra) or AIFF, MP3 or WAV on macOS (NSSound)
 
-remember_window_size  yes
-initial_window_width  640
-initial_window_height 400
-
+# remember_window_size  yes
+# initial_window_width  640
+# initial_window_height 400
 #: If enabled, the window size will be remembered so that new
 #: instances of kitty will have the same size as the previous
 #: instance. If disabled, the window will initially have size
 #: configured by initial_window_width/height, in pixels. You can use a
 #: suffix of "c" on the width/height values to have them interpreted
 #: as number of cells instead of pixels.
+
 enabled_layouts splits
 layout_strategy alternate
-
 #: The enabled window layouts. A comma separated list of layout names.
 #: The special value all means all layouts. The first listed layout
 #: will be used as the startup layout. Default configuration is all
@@ -792,10 +791,10 @@ tab_bar_style separator
 # tab bar style: fade, slant, separator, powerline, custom, hidden
 tab_bar_align left
 # horizontal alignment of tab bar. left, center, right.
-tab_bar_min_tabs 1
+tab_bar_min_tabs 2
 # min tabs before tab bar is shown
-# tab_switch_strategy previous
 
+# tab_switch_strategy previous
 #: The algorithm to use when switching to a tab when the current tab
 #: is closed. The default of previous will switch to the last used
 #: tab. A value of left will switch to the tab to the left of the
@@ -1669,22 +1668,16 @@ map alt+y launch "yazi"
 #:     map ctrl+t new_tab !neighbor [optional cmd to run]
 #:
 
-#: Layout management
+# LAYOUTS
+map kitty_mod+\ next_layout
+map ctrl+alt++\ next_layout
+map kitty_mod+shift+l last_used_layout
 
-#: Next layout
+# You can also create shortcuts to switch to specific layouts::
+#  map ctrl+alt+t goto_layout tall
+#  map ctrl+alt+s goto_layout stack
 
-# map kitty_mod+l next_layout
-
-
-#: You can also create shortcuts to switch to specific layouts::
-
-#:     map ctrl+alt+t goto_layout tall
-#:     map ctrl+alt+s goto_layout stack
-
-#: Similarly, to switch back to the previous layout::
-
-#:    map ctrl+alt+p last_used_layout
-
+# Similarly, to switch back to the previous layout
 #: There is also a toggle layout function that switches to the named
 #: layout or back to the previous layout if in the named layout.
 #: Useful to temporarily "zoom" the active window by switching to the
@@ -1918,6 +1911,19 @@ map kitty_mod+p>f kitten hints --type path --program -
 
 #::      map ctrl+alt+a send_text normal Word\x1b[H
 #::      map ctrl+alt+a send_text application Word\x1bOH
+
+enabled_layouts all
+window_border_width 1
+window_margin_width 0
+window_padding_width 0
+active_border_color #00ff00
+inactive_border_color #cccccc
+
+# Overlay-specific settings
+remember_window_size  no
+initial_window_width  100c
+initial_window_height 30c
+placement_strategy center
 
 # Key Passthroughs
 # use showkey on linux, or Show Key on mac to work out codes, under "key code" (unicode hex)
