--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -871,11 +871,11 @@ tab_bar_background #111
 # THEME
 #
 # foreground #dddddd
-background #111
+background #011
 # 151e13
 #: The foreground and background colors
 
-background_opacity 0.95
+# background_opacity 0.95
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
 #: supported by the OS (for instance, when using a compositor under
@@ -1914,15 +1914,15 @@ map kitty_mod+p>f kitten hints --type path --program -
 
 enabled_layouts all
 window_border_width 1
-window_margin_width 0
-window_padding_width 0
+window_margin_width 1
+window_padding_width 1
 active_border_color #00ff00
 inactive_border_color #cccccc
 
 # Overlay-specific settings
 remember_window_size  no
-initial_window_width  100c
-initial_window_height 30c
+initial_window_width  640
+initial_window_height 480
 placement_strategy center
 
 # Key Passthroughs
