--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,4 +1,3 @@
-live_config_reload = true
 
 [colors]
 draw_bold_text_with_bright_colors = true
@@ -63,3 +62,6 @@ lines = 36
 [window.padding]
 x = 20
 y = 20
+
+[general]
+live_config_reload = true
