--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -32,7 +32,7 @@ p script-binding show-minimal-playlist
 s cycle sub
 
 # Random clip
-SHIFT+Enter script-binding jump-to-random-file
+Ctrl+ENTER script-binding jump-to-random-file
 #Shift+J script-binding jump-to-random-file
 Shift+J script-message-to playlist_manager random
 
