--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -26,13 +26,15 @@ p script-binding show-minimal-playlist
 / show-text "${metadata/title:}\n${?gt(width,height):${width}:${height}}p @ ${estimated-vf-fps}fps\n${file-size}${?video-bitrate: [${video-bitrate}]}" 5000 1
 
 #/ show-text "${metadata/title:}\n${!add(gt(width,height),gt(height,width)):${width:0}:${height:0}}p @ ${estimated-vf-fps}fps\n${file-size}${?video-bitrate: [${video-bitrate}]}" 5000 1
-# ? show shortcut help
+# SHIFT+/ show shortcut help
+SHIFT+? show-text "[?:HELP   /:INFO   R:RANDOMIZE]"
 
 # toggle subtitles
 s cycle sub
 
 # Random clip
-Ctrl+ENTER script-binding jump-to-random-file
+SHIFT+Enter script-binding play-random
+
 #Shift+J script-binding jump-to-random-file
 Shift+J script-message-to playlist_manager random
 
