--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1912,12 +1912,14 @@ map kitty_mod+p>f kitten hints --type path --program -
 #::      map ctrl+alt+a send_text normal Word\x1b[H
 #::      map ctrl+alt+a send_text application Word\x1bOH
 
+# TILING
+#
 enabled_layouts all
-window_border_width 1
-window_margin_width 1
-window_padding_width 1
+window_border_width 5
+window_margin_width 5
+window_padding_width 0
 active_border_color #00ff00
-inactive_border_color #cccccc
+inactive_border_color #111111
 
 # Overlay-specific settings
 remember_window_size  no
