--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -7,7 +7,7 @@ kitty_mod cmd
 # KEYBINDINGS
 # -----------------------------
 
-## Tabs Management
+## Tabs
 map kitty_mod+1 goto_tab 1
 map kitty_mod+2 goto_tab 2
 map kitty_mod+3 goto_tab 3
@@ -20,43 +20,36 @@ map kitty_mod+9 goto_tab 9
 map ctrl+cmd+] move_tab_forward
 map ctrl+cmd+[ move_tab_backward
 map shift+cmd+t new_tab_with_cwd
-map shift+cmd+w close_os_window
+map kitty_mod+shift+r set_tab_title
+map kitty_mod+right next_tab
+map kitty_mod+left previous_tab
 
 ## Window Management
+map shift+cmd+w close_os_window
 map kitty_mod+j neighboring_window down
 map kitty_mod+k neighboring_window up
 map kitty_mod+h neighboring_window left
 map kitty_mod+l neighboring_window right
-#map kitty_mod+shift+enter new_window_with_cwd
 map kitty_mod+shift+enter launch --location=split --cwd=current
-
+map kitty_mod+] next_window
+map kitty_mod+[ previous_window
+map kitty_mod+w close_window
+# map kitty_mod+shift+enter new_window_with_cwd
 # map kitty_mod+| split_window -v --cwd=current
 # map kitty_mod+- split_window -h --cwd=current
 
 # Create new window panes in different directions
-map kitty_mod+w close_window
 map ctrl+w>s launch --location=bottom
 map ctrl+w>a launch --location=left
 map ctrl+w>d launch --location=right
 map ctrl+w>q close_window
-
-## Tab Management
-map kitty_mod+shift+r set_tab_title
-
-## Tab Navigation
-map kitty_mod+right next_tab
-map kitty_mod+left previous_tab
-map kitty_mod+] next_window
-map kitty_mod+[ previous_window
-
 map kitty_mod+w close_window
 map kitty_mod+r launch --cwd=current open --reveal .
 map kitty_mod+enter launch --cwd=current open --reveal .
-
 map ctrl+shift+c combine : toggle_marker text 1 ❯ : copy_to_clipboard
 
-# map kitty_mod+w close_window
 # Create new window panes in different directions
+# map kitty_mod+w close_window
 # map cmd+w>w launch --location=top
 map ctrl+w>s launch --location=bottom
 map ctrl+w>a launch --location=left
@@ -65,12 +58,8 @@ map ctrl+w>w close_window
 
 map alt+space launch --type=overlay --cwd=current kitty-overlay-lf
 
-
-
 # map cmd+o shell_command open $(kitty @ ls | jq -r '.[0].cwd'
-
 # map cmd+j goto_tab_below
-# map cmd+k goto_tab_above
 # map cmd+h goto_tab_left
 # map cmd+l goto_tab_right
 
@@ -104,7 +93,6 @@ map cmd+shift+g			show_last_command_output
 
 map kitty_mod+f2 launch --title "kitty.conf overlay" --type=overlay screen -d -RR kitty.conf nvim $HOME/.config/kitty/kitty.conf
 
-
 # focus kitty
 # map ctrl+space focus_toggle
 #
@@ -126,21 +114,21 @@ font_size        14
 
 # disable_ligatures never
 
-#: Choose how you want to handle multi-character ligatures. The
-#: default is to always render them.  You can tell kitty to not render
-#: them when the cursor is over them by using cursor to make editing
-#: easier, or have kitty never render them at all by using always, if
-#: you don't like them. The ligature strategy can be set per-window
-#: either using the kitty remote control facility or by defining
-#: shortcuts for it in kitty.conf, for example::
+# Choose how you want to handle multi-character ligatures. The
+# default is to always render them.  You can tell kitty to not render
+# them when the cursor is over them by using cursor to make editing
+# easier, or have kitty never render them at all by using always, if
+# you don't like them. The ligature strategy can be set per-window
+# either using the kitty remote control facility or by defining
+# shortcuts for it in kitty.conf, for example::
 
-#:     map alt+1 disable_ligatures_in active always
-#:     map alt+2 disable_ligatures_in all never
-#:     map alt+3 disable_ligatures_in tab cursor
+# map alt+1 disable_ligatures_in active always
+# map alt+2 disable_ligatures_in all never
+# map alt+3 disable_ligatures_in tab cursor
 
-#: Note that this refers to programming ligatures, typically
-#: implemented using the calt OpenType feature. For disabling general
-#: ligatures, use the font_features setting.
+# Note that this refers to programming ligatures, typically
+#  implemented using the calt OpenType feature. For disabling general
+#  ligatures, use the font_features setting.
 
 # font_features
 
@@ -252,7 +240,7 @@ cursor_blink_interval 0.5
 #: that numbers smaller than repaint_delay will be limited to
 #: repaint_delay.
 
-# cursor_stop_blinking_after 15.0
+cursor_stop_blinking_after 3.0
 
 #: Stop blinking cursor after the specified number of seconds of
 #: keyboard inactivity.  Set to zero to never stop blinking.
@@ -320,17 +308,12 @@ mouse_hide_wait 2
 #: robustly with the ever-changing sea of bugs that is Cocoa is too
 #: much effort.
 
-# url style (on mouseover)
+# URLs
 url_color #0066FF
 url_style curly
 open_url_with default
 url_prefixes http https file ftp gemini irc gopher mailto news git
-# detect urls under mouse
 detect_urls yes
-
-#: Detect URLs under the mouse. Detected URLs are highlighted with an
-#: underline and the mouse cursor becomes a hand over them. Even if
-#: this option is disabled, URLs are still clickable.
 
 # url_excluded_characters
 
@@ -354,11 +337,10 @@ detect_urls yes
 #: programs, including websites open in your browser can read the
 #: contents of the system clipboard.
 
-# strip_trailing_spaces never
-
-#: Remove spaces at the end of lines when copying to clipboard. A
-#: value of smart will do it when using normal selections, but not
-#: rectangle selections. always will always do it.
+strip_trailing_spaces smart
+# Remove spaces at the end of lines when copying to clipboard. A
+# value of smart will do it when using normal selections, but not
+# rectangle selections. always will always do it.
 
 select_by_word_characters @-./_~?&=%+#
 
