--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -832,16 +832,16 @@ tab_title_template "{title[title.rfind('/')+1:].lower()[:3]}{sup.index}"
 #: Template to use for active tabs, if not specified falls back to
 #: tab_title_template.
 
+# Tab bar colors and styles
+tab_bar_background none
+# active_tab_background #000
+inactive_tab_background #011
+active_tab_background   #011
 active_tab_foreground   #FF00FF
-active_tab_background   #111
 active_tab_font_style   bold
-inactive_tab_foreground #AAA
-inactive_tab_background #111
+inactive_tab_foreground #011
 inactive_tab_font_style normal
 
-#: Tab bar colors and styles
-
-tab_bar_background #111
 #: Background color for the tab bar. Defaults to using the terminal
 #: background color.
 
@@ -994,7 +994,7 @@ shell zsh
 #: --login and --interactive to ensure that the shell starts in
 #: interactive mode and reads its startup rc files.
 
-editor .
+editor nvim
 #: The terminal editor (such as ``vim`` or ``nano``) to use when
 #: editing the kitty config file or similar tasks.
 
@@ -1492,10 +1492,10 @@ env PATH=$HOME/.zsh/bin:$PATH
 #map kitty_mod+y launch --cwd=current yazi
 #map cmd+y kitten run-shell zsh -ic '_yazi-jump'
 #map kitty_mod+y remote_control launch --type=overlay zsh -ic '_yazi-jump'
-map alt+s launch "media search --verbose"
-map alt+p launch "ls-media | mpv-stdin"
+map alt+s launch "/Users/nom/.zsh/bin/media search --verbose"
+map alt+p launch "/Users/nom/.zsh/bin/ls-media | /Users/nom/.zsh/bin/mpv-stdin"
 #map alt+p launch "media play --shuffle"
-map alt+y launch "yazi"
+map ctrl+\ launch --cwd=current "yazi"
 # map ctrl+space launch --type=overlay zsh -ic '_yazi-jump'
 #map ctrl+space no_op
 
