--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -31,7 +31,7 @@ video-sync=audio  # Usually better for short clips
 demuxer-max-bytes=1000000KiB
 demuxer-readahead-secs=2
 cache=yes
-cache-secs=2
+cache-secs=10
 
 # Quicker navigation between files
 force-window=immediate
@@ -117,4 +117,4 @@ osd-duration=3000                 # Messages fade out after 3 seconds
 # Default English subtitles if available
 #slang=en
 
-input-ipc-server=/tmp/.mpv-socket
+# input-ipc-server=/tmp/.mpv-socket
