--- a/apps/yazi/keymap.toml
+++ b/apps/yazi/keymap.toml
@@ -39,8 +39,8 @@ keymap = [
 
 	{ on = ["<A-c>"], run = "cd", desc = "Change directory with fzf" },
 
-	{ on = [ "g", "g" ], run = "arrow -99999999", desc = "Move cursor to the top" },
-	{ on = "G",          run = "arrow 99999999",  desc = "Move cursor to the bottom" },
+	{ on = [ "g", "g" ], run = "arrow top", desc = "Move cursor to the top" },
+	{ on = "G",          run = "arrow bot",  desc = "Move cursor to the bottom" },
 
 	# Navigation
 	{ on = "h", run = "leave", desc = "Go back to the parent directory" },
