--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1492,8 +1492,8 @@ env PATH=$HOME/.zsh/bin:$PATH
 #map kitty_mod+y launch --cwd=current yazi
 #map cmd+y kitten run-shell zsh -ic '_yazi-jump'
 #map kitty_mod+y remote_control launch --type=overlay zsh -ic '_yazi-jump'
-map alt+s launch "/Users/nom/.zsh/bin/media search --verbose"
-map alt+p launch "/Users/nom/.zsh/bin/ls-media | /Users/nom/.zsh/bin/mpv-stdin"
+#map alt+s launch "/Users/nom/.zsh/bin/media search --verbose"
+#map alt+p launch "/Users/nom/.zsh/bin/ls-media | /Users/nom/.zsh/bin/mpv-stdin"
 #map alt+p launch "media play --shuffle"
 map ctrl+\ launch --cwd=current "yazi"
 # map ctrl+space launch --type=overlay zsh -ic '_yazi-jump'
