--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -604,12 +604,10 @@ visual_bell_duration 0.1
 #: as number of cells instead of pixels.
 
 enabled_layouts splits
+#
+# layouts https://sw.kovidgoyal.net/kitty/overview/#layouts.
 layout_strategy alternate
-#: The enabled window layouts. A comma separated list of layout names.
-#: The special value all means all layouts. The first listed layout
-#: will be used as the startup layout. Default configuration is all
-#: layouts in alphabetical order. For a list of available layouts, see
-#: the https://sw.kovidgoyal.net/kitty/overview/#layouts.
+
 
 # window_resize_step_cells 2
 # window_resize_step_lines 2
@@ -648,14 +646,12 @@ window_margin_width 0
 #: values set top, horizontal and bottom. Four values set top, right,
 #: bottom and left.
 
-window_padding_width 0 26 26 26
+window_padding_width 0 50 50 50
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
 #: the vertical and horizontal sides. Three values set top, horizontal
 #: and bottom. Four values set top, right, bottom and left.
-
-placement_strategy center
 
 #: When the window size is not an exact multiple of the cell size, the
 #: cell area of the terminal window will have some extra padding on
@@ -1903,12 +1899,6 @@ window_padding_width 0
 active_border_color #00ff00
 inactive_border_color #111111
 
-# Overlay-specific settings
-remember_window_size  no
-initial_window_width  640
-initial_window_height 480
-placement_strategy center
-
 # Key Passthroughs
 # use showkey on linux, or Show Key on mac to work out codes, under "key code" (unicode hex)
 
@@ -1941,3 +1931,10 @@ map cmd+shift+y launch --type=tab yazi
 
 # Theme
 include themes/1984-dark
+
+
+# Overlay-specific settings
+remember_window_size  no
+initial_window_width  1200
+initial_window_height 800
+placement_strategy center
