--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,13 +1,10 @@
 # KITTY CONFIG
 
-# Set mod key to cmd
 kitty_mod cmd
 
-# -----------------------------
-# KEYBINDINGS
-# -----------------------------
-
-## Tabs
+## TAB MANAGEMENT
+map kitty_mod+right next_tab
+map kitty_mod+left previous_tab
 map kitty_mod+1 goto_tab 1
 map kitty_mod+2 goto_tab 2
 map kitty_mod+3 goto_tab 3
@@ -21,10 +18,8 @@ map ctrl+cmd+] move_tab_forward
 map ctrl+cmd+[ move_tab_backward
 map shift+cmd+t new_tab_with_cwd
 map kitty_mod+shift+r set_tab_title
-map kitty_mod+right next_tab
-map kitty_mod+left previous_tab
 
-## Window Management
+## WINDOW MANAGEMENT
 map shift+cmd+w close_os_window
 map kitty_mod+j neighboring_window down
 map kitty_mod+k neighboring_window up
@@ -39,7 +34,7 @@ map kitty_mod+w close_window
 # map kitty_mod+- split_window -h --cwd=current
 
 # Create new window panes in different directions
-map ctrl+w>s launch --location=bottom
+map ctrl+w>s launch --location=vsplit
 map ctrl+w>a launch --location=left
 map ctrl+w>d launch --location=right
 map ctrl+w>q close_window
@@ -58,12 +53,6 @@ map ctrl+w>w close_window
 
 map alt+space launch --type=overlay --cwd=current kitty-overlay-lf
 
-# map cmd+o shell_command open $(kitty @ ls | jq -r '.[0].cwd'
-# map cmd+j goto_tab_below
-# map cmd+h goto_tab_left
-# map cmd+l goto_tab_right
-
-#: Toggle fullscreen
 map super+f toggle_fullscreen
 
 map cmd+shift+n			new_os_window_with_cmd
@@ -828,16 +817,6 @@ tab_title_template "{title[title.rfind('/')+1:].lower()[:3]}{sup.index}"
 #: Template to use for active tabs, if not specified falls back to
 #: tab_title_template.
 
-# Tab bar colors and styles
-tab_bar_background none
-# active_tab_background #000
-inactive_tab_background #011
-active_tab_background   #011
-active_tab_foreground   #FF00FF
-active_tab_font_style   bold
-inactive_tab_foreground #011
-inactive_tab_font_style normal
-
 #: Background color for the tab bar. Defaults to using the terminal
 #: background color.
 
@@ -1509,7 +1488,7 @@ map ctrl+\ launch --cwd=current "yazi"
 #::  You can open a new window next to the currently active window or
 #::  as the first window, with::
 
-#::      map ctrl+n launch --location=neighbor some_program
+map ctrl+n launch --cwd=current --location=neighbor yazi
 #::      map ctrl+f launch --location=first some_program
 
 #::  For more details, see launch.
@@ -1602,14 +1581,6 @@ map ctrl+\ launch --cwd=current "yazi"
 #: Visually swap window with another
 
 # map kitty_mod+f8 swap_with_window
-
-#: Tab management
-
-#: New tab
-
-# map shift+cmd+t new_tab
-# map cmd+t new_tab
-# map ctrl+t new_tab
 
 #: Close tab
 
@@ -1890,15 +1861,6 @@ map kitty_mod+p>f kitten hints --type path --program -
 #::      map ctrl+alt+a send_text normal Word\x1b[H
 #::      map ctrl+alt+a send_text application Word\x1bOH
 
-# TILING
-#
-enabled_layouts all
-window_border_width 5
-window_margin_width 5
-window_padding_width 0
-active_border_color #00ff00
-inactive_border_color #111111
-
 # Key Passthroughs
 # use showkey on linux, or Show Key on mac to work out codes, under "key code" (unicode hex)
 
@@ -1921,17 +1883,33 @@ map		cmd+s						send_text	all \x13
 # cmd+o -> ctrl+o
 map		cmd+o						send_text all \x0f
 # cmd+j -> alt+j
-map cmd+j send_text all \x1bj
-map cmd+l send_text all \x1bl
+map   cmd+j send_text all \x1bj
+map   cmd+l send_text all \x1bl
 
 map		cmd+backspace		send_text all \x15
+map   cmd+shift+b launch --type=tab btm
+map   cmd+shift+y launch --type=tab yazi
 
-map cmd+shift+b launch --type=tab btm
-map cmd+shift+y launch --type=tab yazi
-
-# Theme
+# THEME
+#
 include themes/1984-dark
 
+enabled_layouts all
+window_border_width 5
+window_margin_width 5
+window_padding_width 0
+active_border_color #00ff00
+inactive_border_color #111111
+
+# Tab bar colors and styles
+tab_bar_background none
+# active_tab_background #000
+inactive_tab_background #011
+active_tab_background   #011
+active_tab_foreground   #FF00FF
+active_tab_font_style   bold
+inactive_tab_foreground #011
+inactive_tab_font_style normal
 
 # Overlay-specific settings
 remember_window_size  no
