--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -11,6 +11,8 @@ r playlist-shuffle ; show-text "Shuffled ${playlist-count} items" 1000 1
 Meta+d script-binding replace-playlist
 #Meta+s playlist-clear ; loadfiles "${path}/.*" ; playlist-remove "${path}/${filename}" ; show-text "Playing ${path:name} (${playlist-count} clips)"
 
+Meta+j script-binding random_jump
+
 # Edit with losslesscut
 Meta+t run /Applications/LosslessCut.app/Contents/MacOS/LosslessCut "%{path}"
 
