--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1488,7 +1488,7 @@ map ctrl+\ launch --cwd=current "yazi"
 #::  You can open a new window next to the currently active window or
 #::  as the first window, with::
 
-map ctrl+n launch --cwd=current --location=neighbor yazi
+# map ctrl+n launch --cwd=current --location=neighbor yazi
 #::      map ctrl+f launch --location=first some_program
 
 #::  For more details, see launch.
