--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -828,7 +828,7 @@ tab_title_template "{title[title.rfind('/')+1:].lower()[:3]}{sup.index}"
 # THEME
 #
 # foreground #dddddd
-background #011
+background #001105
 # 151e13
 #: The foreground and background colors
 
@@ -1302,7 +1302,6 @@ macos_custom_beam_cursor yes
 
 # action_alias
 
-#: E.g. action_alias launch_tab launch --type=tab --cwd=current
 
 #: Define aliases to avoid repeating the same options in multiple
 #: mappings. Aliases can be defined for any action. Aliases are
@@ -1310,7 +1309,9 @@ macos_custom_beam_cursor yes
 #: create mappings to launch a new tab in the current working
 #: directory without duplication::
 
-map f1 launch_tab vim
+action_alias launch_tab launch --type=tab --cwd=current
+
+map f1 launch_tab nvim
 map f2 launch_tab lf
 
 #: Similarly, to alias kitten invocation::
@@ -1898,18 +1899,19 @@ enabled_layouts all
 window_border_width 5
 window_margin_width 5
 window_padding_width 0
+
 active_border_color #00ff00
 inactive_border_color #111111
 
 # Tab bar colors and styles
 tab_bar_background none
 # active_tab_background #000
-inactive_tab_background #011
 active_tab_background   #011
-active_tab_foreground   #FF00FF
+active_tab_foreground   #00FFFF
 active_tab_font_style   bold
-inactive_tab_foreground #011
-inactive_tab_font_style normal
+inactive_tab_background #011
+inactive_tab_foreground #444444
+inactive_tab_font_style bold
 
 # Overlay-specific settings
 remember_window_size  no
