--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -750,7 +750,7 @@ confirm_os_window_close 0
 #: TAB_BAR
 tab_bar_edge top
 # which edge to show the tab bar on, top or bottom
-tab_bar_margin_width 32.0
+tab_bar_margin_width 1.0
 # margin to the left and right of the tab bar (in pts)
 tab_bar_margin_height 16.0 5.0
 # magin above and below tab bar (in pts).
@@ -794,7 +794,7 @@ tab_separator "  "
 #: tab that does not have focus has some activity. If you want to use
 #: leading or trailing spaces surround the text with quotes.
 
-tab_title_template "{title[title.rfind('/')+1:].lower()[:3]}{sup.index}"
+tab_title_template "{title[title.rfind('/')+1:].lower()[:4]}{sup.index}"
 
 #: A template to render the tab title. The default just renders the
 #: title. If you wish to include the tab-index as well, use something
@@ -820,17 +820,9 @@ tab_title_template "{title[title.rfind('/')+1:].lower()[:3]}{sup.index}"
 #: Background color for the tab bar. Defaults to using the terminal
 #: background color.
 
-# tab_bar_margin_color none
 
 #: Color for the tab bar margin area. Defaults to using the terminal
 #: background color.
-
-# THEME
-#
-# foreground #dddddd
-background #001105
-# 151e13
-#: The foreground and background colors
 
 # background_opacity 0.95
 #: The opacity of the background. A number between 0 and 1, where 1 is
@@ -1895,21 +1887,24 @@ map   cmd+shift+y launch --type=tab yazi
 #
 include themes/1984-dark
 
+foreground #dddddd
+background #153F13
+
 enabled_layouts all
 window_border_width 5
 window_margin_width 5
 window_padding_width 0
 
 active_border_color #00ff00
-inactive_border_color #111111
+inactive_border_color #153F13
 
 # Tab bar colors and styles
-tab_bar_background none
-# active_tab_background #000
-active_tab_background   #011
+#tab_bar_background none
+tab_bar_margin_color none
+#active_tab_background   #011
 active_tab_foreground   #00FFFF
 active_tab_font_style   bold
-inactive_tab_background #011
+#inactive_tab_background #000
 inactive_tab_foreground #444444
 inactive_tab_font_style bold
 
