--- a/mpv/input.conf
+++ b/mpv/input.conf
@@ -67,6 +67,8 @@ Meta+e run "/Applications/LosslessCut.app/Contents/MacOS/LosslessCut" "${path}"
 Shift+I show-text "\fs20${path}\nResolution: ${width}x${height}\nFPS: ${fps}\nCodec: ${video-codec}"
 f show-text "${path}\nResolution: ${width}x${height}\nFPS: ${container-fps}\nCodec: ${video-codec}\nTags: ${metadata}\nFilesize: ${file-size}" 500
 
+Ctrl+r script-message play-random-chapter
+
 # Skip to the previous chapter
 Shift+LEFT add chapter -1
 
