--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,7 +2,7 @@
 
 kitty_mod cmd
 
-## TAB MANAGEMENT
+## TABS
 map kitty_mod+right next_tab
 map kitty_mod+left previous_tab
 map kitty_mod+1 goto_tab 1
@@ -16,10 +16,11 @@ map kitty_mod+8 goto_tab 8
 map kitty_mod+9 goto_tab 9
 map ctrl+cmd+] move_tab_forward
 map ctrl+cmd+[ move_tab_backward
-map shift+cmd+t new_tab_with_cwd
+map kitty_mod+t new_tab_with_cwd !neighbor
+map kitty_mod+shift+t new_tab !neighbor
 map kitty_mod+shift+r set_tab_title
 
-## WINDOW MANAGEMENT
+## WINDOWS
 map kitty_mod+shift+n				new_os_window_with_cwd
 map super+f									toggle_fullscreen
 map shift+cmd+w							close_os_window
@@ -47,14 +48,13 @@ map kitty_mod+m combine : toggle_marker text 1 ❯ : copy_to_clipboard
 
 # PANES
 map kitty_mod+|							split_window -v --cwd=current
+#
+# Vim-style pane navigation
+map ctrl+h neighboring_window left
+map ctrl+j neighboring_window down
+map ctrl+k neighboring_window up
+map ctrl+l neighboring_window right
 
-#map alt+space launch --type=overlay --cwd=current kitty-overlay-lf
-
-
-map cmd+t						new_tab_with_cwd
-map cmd+shift+t			new_tab
-# map cmd+shift+j     new_window_with_cwd
-# map cmd+shift+\     new_window_with_cwd
 map cmd+shift+g			show_last_command_output
 
 # Overlays
@@ -567,15 +567,6 @@ visual_bell_duration 0.1
 #: the operating systems sound API, such as WAV or OGA on Linux
 #: (libcanberra) or AIFF, MP3 or WAV on macOS (NSSound)
 
-# remember_window_size  yes
-# initial_window_width  640
-# initial_window_height 400
-#: If enabled, the window size will be remembered so that new
-#: instances of kitty will have the same size as the previous
-#: instance. If disabled, the window will initially have size
-#: configured by initial_window_width/height, in pixels. You can use a
-#: suffix of "c" on the width/height values to have them interpreted
-#: as number of cells instead of pixels.
 
 # LAYOUTS
 #
@@ -595,7 +586,6 @@ map kitty_mod+2 goto_layout stack
 enabled_layouts splits
 #
 # layouts https://sw.kovidgoyal.net/kitty/overview/#layouts.
-layout_strategy alternate
 
 # window_resize_step_cells 2
 # window_resize_step_lines 2
@@ -648,16 +638,9 @@ window_padding_width 0 50 50 50
 #: placed centrally. A value of top-left means the padding will be on
 #: only the bottom and right edges.
 
-active_border_color #00ff00
-
-#: The color for the border of the active window. Set this to none to
-#: not draw borders around the active window.
-
-# inactive_border_color #cccccc
 
 #: The color for the border of inactive windows
 
-# bell_border_color #ff5a00
 
 #: The color for the border of inactive windows in which a bell has
 #: occurred
@@ -1000,7 +983,7 @@ shell_integration enabled
 # macos_menu_action Split Window Right Command+L
 # map Command+shift+j macos_menu_action Split Window Down Command+J
 
-macos_titlebar_color background
+# macos_titlebar_color background
 #: Change the color of the kitty window's titlebar on macOS. A value
 #: of system means to use the default system color, light or dark can
 #: also be used to set it explicitly. A value of background means to
@@ -1312,7 +1295,7 @@ env PATH=$HOME/.zsh/bin:$PATH
 #map alt+s launch "/Users/nom/.zsh/bin/media search --verbose"
 #map alt+p launch "/Users/nom/.zsh/bin/ls-media | /Users/nom/.zsh/bin/mpv-stdin"
 #map alt+p launch "media play --shuffle"
-map ctrl+\ launch --cwd=current "yazi"
+map ctrl+\ launch --location=neighbor --cwd=current yazi
 # map ctrl+space launch --type=overlay zsh -ic '_yazi-jump'
 #map ctrl+space no_op
 
@@ -1679,15 +1662,15 @@ tab_bar_align left
 # horizontal alignment of tab bar. left, center, right.
 tab_bar_min_tabs 2
 # min tabs before tab bar is shown
-#
-# tab_switch_strategy previous
+
+tab_switch_strategy previous
 #  The algorithm to use when switching to a tab when the current tab
 #  is closed. The default of previous will switch to the last used
 #  tab. A value of left will switch to the tab to the left of the
 #  closed tab. A value of right will switch to the tab to the right of
 #  the closed tab. A value of last will switch to the right-most tab.
 #
-# tab_fade 0.0 0.0 0.0 0.0
+tab_fade 1.0 1.0 1.0 1.0
 #: Control how each tab fades into the background when using fade for
 #: the tab_bar_style. Each number is an alpha (between zero and one)
 #: that controls how much the corresponding cell fades into the
@@ -1703,11 +1686,6 @@ tab_separator "  "
 #: The powerline separator style between tabs in the tab bar when
 #: using powerline as the tab_bar_style, can be one of: angled,
 #: slanted, or round.
-#
-# tab_activity_symbol none
-#: Some text or a unicode symbol to show on the tab if a window in the
-#: tab that does not have focus has some activity. If you want to use
-#: leading or trailing spaces surround the text with quotes.
 #
 tab_title_template "{title[title.rfind('/')+1:].lower()[:4]}{sup.index}"
 #  A template to render the tab title. The default just renders the
@@ -1768,7 +1746,7 @@ window_margin_width 5
 window_padding_width 0
 
 active_border_color #00ff00
-inactive_border_color #153F13
+inactive_border_color #050F63
 
 # TAB STYLE
 #tab_bar_background			none
@@ -1780,11 +1758,19 @@ inactive_tab_background #050F63
 inactive_tab_foreground #444444
 #inactive_tab_font_style bold
 tab_activity_symbol			
+bell_border_color #FF3AD0
 
 # OVERLAYS
 remember_window_size  no
 initial_window_width  1200
 initial_window_height 800
+#  If enabled, the window size will be remembered so that new
+#  instances of kitty will have the same size as the previous
+#  instance. If disabled, the window will initially have size
+#  configured by initial_window_width/height, in pixels. You can use a
+#  suffix of "c" on the width/height values to have them interpreted
+#  as number of cells instead of pixels.
+#
 placement_strategy center
 
 # THEME
