--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -99,7 +99,7 @@ map alt+b launch --stdin-source=@last_cmd_output --stdin-add-formatting --type=o
 map ctrl+\ launch --location=neighbor --cwd=current yazi
 
 map cmd+, edit_config_file
-map cmd+, launch --title "kitty.conf" --type=overlay /opt/homebrew/bin/nvim $HOME/.config/kitty/kitty.conf
+map cmd+, launch --title "kitty.conf" --type=overlay /opt/homebrew/bin/nvim "~/config/kitty/kitty.conf"
 map kitty_mod+shift+= set_background_opacity +0.1
 map kitty_mod+shift+- set_background_opacity -0.1
 
