--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -1,120 +1,70 @@
-# Infinite loop for playlists
+# Playback Behavior
 loop-playlist=inf
-
-# Start in fullscreen
-fullscreen
-script-opts=osc-windowcontrols=no
-no-border
-autofit=100%
-
-# Hardware-accelerated decoding via macOS VideoToolbox
-hwdec=videotoolbox
-
-# Center the player window on screen
+fullscreen=yes
+no-border=yes
 geometry=50%:50%
-
-# Restrict window size to 90% of screen dimensions
 autofit-larger=90%x90%
 
-# Use high-quality GPU rendering preset
-#profile=gpu-hq
-vo=gpu
-#gpu-api=vulkan
+# Decoding (no hwdec, software decoding for stability)
+hwdec=no
 
-# Enable hardware decoding fallback
-hwdec
+# Use libplacebo backend explicitly (better performance on macOS)
+vo=gpu-next
+gpu-api=metal
 
-hr-seek=yes  # More precise seeking
-video-sync=audio  # Usually better for short clips
+# Frame interpolation settings (stable macOS-specific choice)
+video-sync=audio
+interpolation=yes
+tscale=oversample
+tscale-window=quadric
+tscale-radius=1.0
 
-# Faster loading and playback
-demuxer-max-bytes=1000000KiB
-demuxer-readahead-secs=2
+# Conservative scalers (critical!)
+scale=bilinear
+cscale=bilinear
+dscale=bilinear
+
+# Ensure no dropped frames by buffering generously
 cache=yes
-cache-secs=10
+cache-secs=15
+demuxer-max-bytes=500MiB
+demuxer-readahead-secs=10
 
-# Quicker navigation between files
+# Playback behavior
+fullscreen=yes
+loop-playlist=inf
 force-window=immediate
-force-seekable=yes
-keep-open=always
-# reset-on-next-file=all
 
-# Reduce memory usage with many files
-cache-pause=no
-#demuxer-max-back-bytes=10000000
-
-# ----------------------
 # On-Screen Display (OSD)
-# ----------------------
-
-# Font size and alignment
 osd-font="JetBrainsMono Nerd Font Mono"
 osd-font-size=14
 osd-bold=yes
-osd-color="#FFFFFF"               # White text
+osd-color="#FFFFFF"
 osd-scale-by-window=yes
-# osd-line-spacing=2 # Adjust space between lines (default is 0)
-
-osd-on-seek=bar
-#osd-blur=20 # 0-20
-
-osd-border-size=0.5               # Thin outline for text
-osd-border-color="#00000000"      # Semi-transparent black outline
-osd-shadow-offset=0.3               # Minimal shadow for depth
-osd-shadow-color="#000000"      # Soft, transparent black shadow
-osd-margin-x=20                   # Horizontal margin
-osd-margin-y=20                   # Vertical margin
+osd-border-size=1.0
+osd-border-color="#00000080"
+osd-shadow-offset=0.5
+osd-shadow-color="#00000060"
+osd-margin-x=20
+osd-margin-y=20
 osd-bar-align-y=0
-osd-bar-align-x=0 # -1 is far left, 0 is centered, 1 is far right
-osd-bar-outline-size=1
-osd-border-size=5
+osd-bar-align-x=0
 osd-bar-w=60
 osd-bar-h=2
+osd-border-style=background-box
+osd-back-color="#A0000000"
+osd-spacing=0.0
+osd-on-seek=bar
+osd-duration=3000
 
-osd-border-style=background-box # outline-and-shadow|opaque-box|background-box
-osd-back-color="#A0000000" # border behind border-color
-osd-spacing=0.0      # kern
-
-# osd-margin-x=50
-# osd-margin-y=50
-
-
-# Display the filename while playing
 osd-playing-msg="${filename}"
-
-# Status message format (e.g., shows time and playback speed)
 osd-status-msg="Time: ${time-pos} / ${duration} | Speed: ${speed}x"
 
-# Duration for OSD messages
-osd-duration=3000                 # Messages fade out after 3 seconds
+# Audio Settings
+#audio-pitch-correction=no  # Uncomment if desired
 
-# ----------------------
-# AUDIO SETTINGS
-# ----------------------
+# Subtitle defaults
+slang=en
 
-# Optional: Disable pitch correction when changing playback speed
-#audio-pitch-correction=no
-
-# ----------------------
-# VIDEO SETTINGS
-# ----------------------
-
-# Optional: Lock video sync to display refresh rate for smooth playback
-#video-sync=display-resample
-
-# ----------------------
-# OTHER SETTINGS
-# ----------------------
-
-# Force mpv to keep the window open after playback
-#keep-open=yes
-
-# Optional: Enable caching for smoother streaming
-#cache=yes
-#demuxer-max-bytes=500M
-#demuxer-max-back-bytes=100M
-
-# Default English subtitles if available
-#slang=en
-
-# input-ipc-server=/tmp/.mpv-socket
+# Optional IPC for scripts (uncomment if using scripts/remote control)
+#input-ipc-server=/tmp/mpv-socket
