--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -27,27 +27,31 @@ url_color #0066FF
 url_style curly
 open_url_with default
 
-tab_bar_edge top
+# Tab Appearance
+active_tab_background #ddddfd
+active_tab_foreground #050F63
+inactive_tab_background #030D43
+inactive_tab_foreground #ddddfd
+tab_bar_background #030D43
 tab_bar_style separator
+tab_bar_edge top
 tab_bar_align left
 tab_bar_min_tabs 2
-tab_separator "  "
+tab_separator ""
 tab_switch_strategy previous
-tab_bar_margin_width 1.0
-tab_bar_margin_height 16.0 5.0
+tab_bar_margin_width 0.0
+# tab_bar_margin_height 16.0 5.0
+tab_activity_symbol
+tab_fade 0
+tab_title_template "  {title[title.rfind('/')+1:].lower()[:8]}{sup.index}  "
 
 # Colors
 foreground #ddddfd
 background #050F63
 cursor #ddddfd
-inactive_text_alpha 0.5
+inactive_text_alpha 1.0
 active_border_color #00ff00
 inactive_border_color #050F63
-active_tab_background #ddddfd
-active_tab_foreground #050F63
-inactive_tab_background #050F63
-inactive_tab_foreground #444444
-tab_activity_symbol 
 bell_border_color #FF3AD0
 
 # Layout
@@ -56,9 +60,9 @@ placement_strategy center
 initial_window_width 1200
 initial_window_height 800
 remember_window_size no
-window_border_width 5
-window_margin_width 5
-window_padding_width 0 50 50 50
+window_border_width 2
+window_margin_width 4
+window_padding_width 2 2
 draw_minimal_borders yes
 
 # Keybindings
@@ -74,7 +78,7 @@ map super+f toggle_fullscreen
 map shift+cmd+w close_os_window
 map kitty_mod+w close_window
 map kitty_mod+| split_window -v --cwd=current
-map kitty_mod+shift+enter launch --location=split --cwd=current
+map kitty_mod+enter launch --location=split --cwd=current
 map kitty_mod+shift+j neighboring_window down
 map kitty_mod+shift+k neighboring_window up
 map kitty_mod+shift+h neighboring_window left
@@ -82,27 +86,21 @@ map kitty_mod+shift+l neighboring_window right
 map kitty_mod+] next_window
 map kitty_mod+[ previous_window
 map kitty_mod+r launch --cwd=current open --reveal .
-map kitty_mod+enter launch --cwd=current open --reveal .
 map kitty_mod+m combine : toggle_marker text 1 ❯ : copy_to_clipboard
-
 map ctrl+h neighboring_window left
 map ctrl+j neighboring_window down
 map ctrl+k neighboring_window up
 map ctrl+l neighboring_window right
-
 map cmd+shift+g show_last_command_output
 map kitty_mod+e open_url_with_hints
 map kitty_mod+p>f kitten hints --type path --program -
 map alt+b launch --stdin-source=@last_cmd_output --stdin-add-formatting --type=overlay nvim
 map ctrl+\\ launch --location=neighbor --cwd=current yazi
-
-map cmd+, edit_config_file
 map cmd+, launch --title "kitty.conf" --type=overlay /opt/homebrew/bin/nvim "~/config/kitty/kitty.conf"
 map kitty_mod+shift+= set_background_opacity +0.1
 map kitty_mod+shift+- set_background_opacity -0.1
-
 map kitty_mod+f5 load_config_file
-map ctrl+shift+, load_config_file
+map kitty_mod+shift+, load_config_file
 map kitty_mod+f6 debug_config
 map cmd+ctrl+, debug_config
 
@@ -118,4 +116,4 @@ map cmd+shift+b launch --type=tab btm
 map cmd+shift+y launch --type=tab yazi
 
 # Theme
-include themes/1984-dark
+#include themes/1984-dark
