--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -54,6 +54,12 @@ active_border_color #00ff00
 inactive_border_color #050F63
 bell_border_color #FF3AD0
 
+# Tab Color Filters
+tab_color purple title:"kitty.conf"
+tab_color "#39ff14" title:"nvim"  # neon green
+tab_color blue title:"zsh"
+tab_color yellow title:"yazi"
+
 # Layout
 enabled_layouts all
 placement_strategy center
@@ -96,7 +102,8 @@ map kitty_mod+e open_url_with_hints
 map kitty_mod+p>f kitten hints --type path --program -
 map alt+b launch --stdin-source=@last_cmd_output --stdin-add-formatting --type=overlay nvim
 map ctrl+\\ launch --location=neighbor --cwd=current yazi
-map cmd+, launch --title "kitty.conf" --type=overlay /opt/homebrew/bin/nvim "~/config/kitty/kitty.conf"
+map cmd+, launch --title "kitty.conf" --type=tab /opt/homebrew/bin/nvim "~/config/kitty/kitty.conf"
+#map cmd+, launch --title "kitty.conf" --type=tab /opt/homebrew/bin/nvim ~/config/kitty/kitty.conf ; set-tab-color --match recent:tab purple
 map kitty_mod+shift+= set_background_opacity +0.1
 map kitty_mod+shift+- set_background_opacity -0.1
 map kitty_mod+f5 load_config_file
