--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -37,13 +37,13 @@ tab_bar_style separator
 tab_bar_edge top
 tab_bar_align left
 tab_bar_min_tabs 2
-tab_separator ""
+tab_separator " "
 tab_switch_strategy previous
 tab_bar_margin_width 0.0
 # tab_bar_margin_height 16.0 5.0
-tab_activity_symbol
+tab_activity_symbol !
 tab_fade 0
-tab_title_template "  {title[title.rfind('/')+1:].lower()[:8]}{sup.index}  "
+tab_title_template " {title.split('/')[-1].strip().lower()[:8]}{sup.index} "
 
 # Colors
 foreground #ddddfd
@@ -53,12 +53,6 @@ inactive_text_alpha 1.0
 active_border_color #00ff00
 inactive_border_color #050F63
 bell_border_color #FF3AD0
-
-# Tab Color Filters
-tab_color purple title:"kitty.conf"
-tab_color "#39ff14" title:"nvim"  # neon green
-tab_color blue title:"zsh"
-tab_color yellow title:"yazi"
 
 # Layout
 enabled_layouts all
@@ -72,44 +66,44 @@ window_padding_width 2 2
 draw_minimal_borders yes
 
 # Keybindings
-map kitty_mod+right next_tab
-map kitty_mod+left previous_tab
-map kitty_mod+t new_tab_with_cwd !neighbor
-map kitty_mod+shift+t new_tab !neighbor
-map kitty_mod+shift+r set_tab_title
-map ctrl+cmd+] move_tab_forward
+map alt+b launch --stdin-source=@last_cmd_output --stdin-add-formatting --type=overlay nvim
+#map cmd+, launch --title "kitty.conf" --type=tab /opt/homebrew/bin/nvim "~/config/kitty/kitty.conf"
+map cmd+, launch --allow-remote-control --title="kitty.conf" --type=tab sh -c 'kitty @ set-tab-color --match title:"kitty.conf" active_bg="#38F273" active_fg="#050F63" inactive_fg="#38F273" inactive_bg="#030D43"; exec /opt/homebrew/bin/nvim ~/config/kitty/kitty.conf'
+map cmd+ctrl+, debug_config
+map cmd+shift+g show_last_command_output
+map ctrl+\ launch --location=neighbor --cwd=current yazi
 map ctrl+cmd+[ move_tab_backward
-map kitty_mod+shift+n new_os_window_with_cwd
-map super+f toggle_fullscreen
-map shift+cmd+w close_os_window
-map kitty_mod+w close_window
-map kitty_mod+| split_window -v --cwd=current
-map kitty_mod+enter launch --location=split --cwd=current
-map kitty_mod+shift+j neighboring_window down
-map kitty_mod+shift+k neighboring_window up
-map kitty_mod+shift+h neighboring_window left
-map kitty_mod+shift+l neighboring_window right
-map kitty_mod+] next_window
-map kitty_mod+[ previous_window
-map kitty_mod+r launch --cwd=current open --reveal .
-map kitty_mod+m combine : toggle_marker text 1 ❯ : copy_to_clipboard
+map ctrl+cmd+] move_tab_forward
 map ctrl+h neighboring_window left
 map ctrl+j neighboring_window down
 map ctrl+k neighboring_window up
 map ctrl+l neighboring_window right
-map cmd+shift+g show_last_command_output
+map kitty_mod+[ previous_window
+map kitty_mod+] next_window
 map kitty_mod+e open_url_with_hints
-map kitty_mod+p>f kitten hints --type path --program -
-map alt+b launch --stdin-source=@last_cmd_output --stdin-add-formatting --type=overlay nvim
-map ctrl+\\ launch --location=neighbor --cwd=current yazi
-map cmd+, launch --title "kitty.conf" --type=tab /opt/homebrew/bin/nvim "~/config/kitty/kitty.conf"
-#map cmd+, launch --title "kitty.conf" --type=tab /opt/homebrew/bin/nvim ~/config/kitty/kitty.conf ; set-tab-color --match recent:tab purple
-map kitty_mod+shift+= set_background_opacity +0.1
-map kitty_mod+shift+- set_background_opacity -0.1
+map kitty_mod+enter launch --location=split --cwd=current
 map kitty_mod+f5 load_config_file
-map kitty_mod+shift+, load_config_file
 map kitty_mod+f6 debug_config
-map cmd+ctrl+, debug_config
+map kitty_mod+left previous_tab
+map kitty_mod+m combine : toggle_marker text 1 ❯ : copy_to_clipboard
+map kitty_mod+p>f kitten hints --type path --program -
+map kitty_mod+r launch --cwd=current open --reveal .
+map kitty_mod+right next_tab
+map kitty_mod+shift+, load_config_file
+map kitty_mod+shift+- set_background_opacity -0.1
+map kitty_mod+shift+= set_background_opacity +0.1
+map kitty_mod+shift+h neighboring_window left
+map kitty_mod+shift+j neighboring_window down
+map kitty_mod+shift+k neighboring_window up
+map kitty_mod+shift+l neighboring_window right
+map kitty_mod+shift+n new_os_window_with_cwd
+map kitty_mod+shift+r set_tab_title
+map kitty_mod+shift+t new_tab !neighbor
+map kitty_mod+t new_tab_with_cwd !neighbor
+map kitty_mod+w close_window
+map kitty_mod+| split_window -v --cwd=current
+map shift+cmd+w close_os_window
+map super+f toggle_fullscreen
 
 # Custom Key Translations
 map ctrl+enter send_text normal,application \x1b[13;5u
