--- a/mpv/mpv.conf
+++ b/mpv/mpv.conf
@@ -1,16 +1,15 @@
 # Playback Behavior
-loop-playlist=inf
-fullscreen=yes
-no-border=yes
 geometry=50%:50%
 autofit-larger=90%x90%
 
 # Decoding (no hwdec, software decoding for stability)
-hwdec=no
+hwdec=auto-safe
+profile=fast
+video-sync=display-resample
 
 # Use libplacebo backend explicitly (better performance on macOS)
-vo=gpu-next
-gpu-api=metal
+#vo=gpu-next
+#gpu-api=next
 
 # Frame interpolation settings (stable macOS-specific choice)
 video-sync=audio
@@ -32,6 +31,7 @@ demuxer-readahead-secs=10
 
 # Playback behavior
 fullscreen=yes
+native-fs=no
 loop-playlist=inf
 force-window=immediate
 
