--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -3,7 +3,7 @@ shell zsh
 editor nvim
 allow_remote_control yes
 listen_on unix:/tmp/kitty-socket
-env PATH=$HOME/.zsh/bin:$PATH
+env PATH=/opt/homebrew/bin:/opt/homebrew/sbin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:$HOME/.zsh/bin:$HOME/.bin:$PATH
 exe_search_path +$HOME/.zsh/bin
 
 # Appearance
@@ -69,6 +69,8 @@ draw_minimal_borders yes
 map alt+b launch --stdin-source=@last_cmd_output --stdin-add-formatting --type=overlay nvim
 #map cmd+, launch --title "kitty.conf" --type=tab /opt/homebrew/bin/nvim "~/config/kitty/kitty.conf"
 map cmd+, launch --allow-remote-control --title="kitty.conf" --type=tab sh -c 'kitty @ set-tab-color --match title:"kitty.conf" active_bg="#38F273" active_fg="#050F63" inactive_fg="#38F273" inactive_bg="#030D43"; exec /opt/homebrew/bin/nvim ~/config/kitty/kitty.conf'
+map kitty_mod+0 launch --hold env PATH="/opt/homebrew/bin:$PATH" sh -c 'media search'
+map kitty_mod+1 launch --hold env PATH="/opt/homebrew/bin:$PATH" sh -c 'fzf-tablature'
 map cmd+ctrl+, debug_config
 map cmd+shift+g show_last_command_output
 map ctrl+\ launch --location=neighbor --cwd=current yazi
