--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -6,7 +6,7 @@ listen_on unix:/tmp/kitty-socket
 env PATH=/opt/homebrew/bin:/opt/homebrew/sbin:/usr/local/bin:/usr/bin:/bin:/usr/sbin:/sbin:$HOME/.zsh/bin:$HOME/.bin:$PATH
 exe_search_path +$HOME/.zsh/bin
 
-# Appearance
+# APPEARANCE
 font_family JetBrainsMono Nerd Font Mono
 font_size 14
 cursor_shape block
@@ -27,7 +27,7 @@ url_color #0066FF
 url_style curly
 open_url_with default
 
-# Tab Appearance
+# TAB APPEARANCE
 active_tab_background #ddddfd
 active_tab_foreground #050F63
 inactive_tab_background #030D43
@@ -40,12 +40,11 @@ tab_bar_min_tabs 2
 tab_separator " "
 tab_switch_strategy previous
 tab_bar_margin_width 16.0
-# tab_bar_margin_height 16.0 5.0
 tab_activity_symbol !
 tab_fade 0
 tab_title_template " {title.split('/')[-1].strip().lower()[:8]}{sup.index} "
 
-# Colors
+# COLORS
 foreground #ddddfd
 background #050F63
 cursor #ddddfd
@@ -54,23 +53,25 @@ active_border_color #00ff00
 inactive_border_color #050F63
 bell_border_color #FF3AD0
 
-# Layout
+# LAYOUT
 enabled_layouts all
 placement_strategy center
 initial_window_width 1200
 initial_window_height 800
 remember_window_size no
 window_border_width 2
-window_margin_width 4
-window_padding_width 2 2
+window_margin_width 20 15
+window_padding_width 20 15
 draw_minimal_borders yes
 
-# Keybindings
+# KEYBINDINGS
+map kitty_mod+a set_tab_color #FFA500
 map alt+b launch --stdin-source=@last_cmd_output --stdin-add-formatting --type=overlay nvim
 #map cmd+, launch --title "kitty.conf" --type=tab /opt/homebrew/bin/nvim "~/config/kitty/kitty.conf"
 map cmd+, launch --allow-remote-control --title="kitty.conf" --type=tab sh -c 'kitty @ set-tab-color --match title:"kitty.conf" active_bg="#38F273" active_fg="#050F63" inactive_fg="#38F273" inactive_bg="#030D43"; exec /opt/homebrew/bin/nvim ~/config/kitty/kitty.conf'
 map kitty_mod+0 launch --hold env PATH="/opt/homebrew/bin:$PATH" sh -c 'media search'
 map kitty_mod+1 launch --hold env PATH="/opt/homebrew/bin:$PATH" sh -c 'fzf-tablature'
+map cmd+1 launch --type=background "/opt/homebrew/bin/kitty @ set-colors --match id:$KITTY_WINDOW_ID tab_active_bg=#FFA500"
 map cmd+ctrl+, debug_config
 map cmd+shift+g show_last_command_output
 map ctrl+\ launch --location=neighbor --cwd=current yazi
@@ -80,6 +81,10 @@ map ctrl+h neighboring_window left
 map ctrl+j neighboring_window down
 map ctrl+k neighboring_window up
 map ctrl+l neighboring_window right
+map kitty_mod+h neighboring_window left
+map kitty_mod+j neighboring_window down
+map kitty_mod+k neighboring_window up
+map kitty_mod+l neighboring_window right
 map kitty_mod+[ previous_window
 map kitty_mod+] next_window
 map kitty_mod+e open_url_with_hints
@@ -89,7 +94,7 @@ map kitty_mod+f6 debug_config
 map kitty_mod+left previous_tab
 map kitty_mod+m combine : toggle_marker text 1 ❯ : copy_to_clipboard
 map kitty_mod+p>f kitten hints --type path --program -
-map kitty_mod+r launch --cwd=current open --reveal .
+map kitty_mod+r launch --type=background --cwd=current open --reveal .
 map kitty_mod+right next_tab
 map kitty_mod+shift+, load_config_file
 map kitty_mod+shift+- set_background_opacity -0.1
@@ -107,7 +112,7 @@ map kitty_mod+| split_window -v --cwd=current
 map shift+cmd+w close_os_window
 map super+f toggle_fullscreen
 
-# Custom Key Translations
+# CUSTOM KEY TRANSLATIONS
 map ctrl+enter send_text normal,application \x1b[13;5u
 map shift+enter send_text normal,application \x1b[13;2u
 map cmd+s send_text all \x13
@@ -118,5 +123,5 @@ map cmd+backspace send_text all \x15
 map cmd+shift+b launch --type=tab btm
 map cmd+shift+y launch --type=tab yazi
 
-# Theme
+# THEME
 #include themes/1984-dark
